--- a/templates/about_page.html
+++ b/templates/about_page.html
@@ -1,8 +1,87 @@
 {% extends "base/base.html" %}
 {% block content %}
-    <div class="container">
-        <div class="col-sm-4 col-12">
-            <h1>ABOUT US PAGE</h1>
-        <div>
+    <div class="container-fluid padding bg-dark text-white text-center">
+        <div class="row padding">
+            <div class="col-lg-6">
+                <h1 class="h1">Who We Are</h1>
+                <p class="lead">
+                    We are a global investment manager, serving the UK market for more than 20 years. We are committed to helping more and more people plan for their financial future.
+                    No matter what your goals may be, we are invested in you.
+                </p>
+                <p class="lead">
+                    Bank offers a range of solutions for institutions, financial professionals and individuals across the UK. From shop assistants in your local stores to national organisations and charities, BlackRock has helped people from the UK take control of their financial security for more than 20 years.
+                </p>
+            </div>
+            <div class="col-lg-6">
+                <img src="/static/field_bird_view.png" alt="Green Field" class="img-fluid">
+            </div>
+
+        </div>
+    </div> 
+
+    <div class="container-fluid padding bg-white text-dark text-center">
+        <div class="row padding">
+            <div class="col-lg-6">
+                <img src="/static/water.png" alt="Water" class="img-fluid">
+            </div>
+            <div class="col-lg-6">
+                <h1 class="h1">What We Do</h1>
+                <p class="lead">
+                    Our purpose is to help more and more people experience financial well-being. In pursuit of this, a focus on long-term
+                    sustainability is embedded across our business. From integrating environmental, social and governance (ESG) practices into our investment processes to creating positive social impact by serving communities in the UK, we are dedicated to helping clients, employees, shareholders and communities achieve long-term, financial well-being.
+                </p>
+            </div>
+        </div>
     </div>
+
+    <div class="container-fluid padding bg-dark text-white text-center">
+        <div class="row padding">
+            <div class="col-lg-6">
+                <h1 class="h1">What We Offer</h1>
+                <p class="lead">
+                    We are designed to deliver a better solution for clients. We offer investment products from index and alpha to portfolio construction.
+                </p>
+                <p class="lead">
+                    Aladdin produces a range of technology that seeks to provide investment professionals with the clarity to see, understand and act no matter how much the world changes.
+                </p>
+            </div>
+            <div class="col-lg-6">
+                <img src="/static/trees.png" alt="Water" class="img-fluid">
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid padding bg-white text-dark text-center">
+        <div class="row padding">
+            <div class="col-12">
+                <h1 class="h1">What we stand for</h1>
+                <p class="lead">
+                    We’re guided by our culture and a set of principles that ensure we never forget what we stand for –
+                     to help more and more people invest in their financial well-being.
+                </p>
+                <br>
+                <br>
+                <h2 class="h2">
+                    We are a fiduciary to our clients
+                </h2>
+                <p class="lead">
+                    Put simply, your goals are our goals. We represent your voice, your needs and your investment goals in every decision we make.
+                </p>
+                <h2 class="h2">
+                    We are passionate about performance
+                </h2>
+                <p class="lead">
+                    We take emotional ownership of every aspect of the work we do, prizing strong subject matter expertise and an insatiable appetite to learn.
+                </p>
+                <h2 class="h2">
+                    We are One
+                </h2>
+                <p class="lead">
+                    We know that working in silos is not conducive to our best work. We pride ourselves on our solutions that result from the constant collaboration between our diverse teams.
+                </p>
+            </div>
+        </div>
+    </div>
+
+
 {% endblock content %}
