--- a/accounts/templates/accounts/logout.html
+++ b/accounts/templates/accounts/logout.html
@@ -1,11 +1,37 @@
 {% extends "base/base.html" %}
 {% block content %}
-    <div class="container">
-        <h1 class="main-header">You Are Now Logged Out</h1>
-        <h4>Thank you and see you again soon!</h4>
-        <div>
-            <h4>Want To Log Back In? <a id="logoutbutton" href="{% url 'login' %}">Click Here</a></h4>
+    <div id="slides" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="/static/london.png" alt="London">
+                <div class="carousel-caption">
+                    <p class="h1">You have logged out successfully</p>
+                    <br>
+                    <p class="h2">We hope to see you again soon</p>
+                    <br>
+                    <a href="{% url 'login' %}">
+                        <button type="button" class="btn btn-outline-light btn-lg">
+                            Login
+                        </button>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
-
+    <div class="container-fluid padding">
+        <div class="row text-center padding">
+            <div class="col-12">
+                <br>
+                <h2 class="text-dark">Connect with us!</h2>
+            </div>
+            <div class="col-12 social padding">
+                <a href="#" type="button" role="button"><i class="fab fa-facebook"></i></a>
+                <a href="#" type="button" role="button"><i class="fab fa-twitter"></i></a>
+                <a href="#" type="button" role="button"><i class="fab fa-google-plus-g"></i></a>
+                <a href="#" type="button" role="button"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#" type="button" role="button"><i class="fab fa-instagram"></i></a>
+                <a href="#" type="button" role="button"><i class="fab fa-youtube"></i></a>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
