--- a/templates/contact/view.html
+++ b/templates/contact/view.html
@@ -1,13 +1,34 @@
 {% extends "base/base.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
-    <div class="container">
-        <h1 class="main-header">Have a Question We Can Help With?</h1>
-        <h6>Please Complete the Following Form - We Aim To Respond To All Queries in 3-5 Working Days.</h6>
-        <div class="col-sm-4 col-12">
-            <form method="POST"> {% csrf_token %}
-                {{ form }}
-                <button type='submit' class='login-btn btn-default'>Submit</button>
+    <div class="page-holder bg-cover bg-dark text-white text-center">
+        <div class="container py-5">
+            <h1>Have a Question We Can Help With?</h1>
+            <br>
+            <h4>Please complete the below form.</h4>
+            <form method="POST" class="contactform"> {% csrf_token %}
+                {{ form|crispy }}
+                <br>
+                <button type='submit' class='btn btn-outline-light btn-lg'>Submit</button>
             </form>
-            <div>
+        </div>
     </div>
+
+    <div class="container-fluid padding">
+        <div class="row text-center padding">
+            <div class="col-12">
+                <br>
+                <h2 class="text-dark">Connect With Us!</h2>
+            </div>
+            <div class="col-12 social padding">
+                <a href="#" type="button" role="button"><i class="fab fa-facebook"></i></a>
+                <a href="#" type="button" role="button"><i class="fab fa-twitter"></i></a>
+                <a href="#" type="button" role="button"><i class="fab fa-google-plus-g"></i></a>
+                <a href="#" type="button" role="button"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#" type="button" role="button"><i class="fab fa-instagram"></i></a>
+                <a href="#" type="button" role="button"><i class="fab fa-youtube"></i></a>
+            </div>
+        </div>
+    </div>
+
 {% endblock content %}
